--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h1 class="title">Hangman</h1>
       </div>
     </div>
+    <h3 class="text-center">What type of electronic device, commonly used for distance measurement and obstacle detection in robotics and automation, operates based on the emission and reception of high-frequency sound waves beyond the range of human hearing?</h3>
 
     <div id="info" class="modal fade">
       <div class="modal-dialog">
