--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="modal-body">
             <h3>You have completed the task!!!</h3>
             <p>The Passcode is <b>1604</b></p>
-            <p>Your Next Location is <b>"Warm up to the rains, with _________".</b></p>
+            <p>Your Next Location Riddle is :-<b>"Warm up to the rains, with _________".</b></p>
           </div>
           <div class="modal-footer">
             <button class="btn reset" data-dismiss="modal">
