--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           </div>
           <div class="modal-body">
             <h3>You have completed the task!!!</h3>
+            <p>Your Location Riddle is :-<b>"Warm up to the rains, with _________".</b></p>
             <p>The Passcode is <b>1604</b></p>
-            <p>Your Next Location Riddle is :-<b>"Warm up to the rains, with _________".</b></p>
           </div>
           <div class="modal-footer">
             <button class="btn reset" data-dismiss="modal">
