--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
           </div>
           <div class="modal-body">
             <h3>You have completed the task!!!</h3>
-            <p>Your Location Riddle is :-<b>"Warm up to the rains, with _________".</b></p>
-            <p>The Passcode is <b>1604</b></p>
+            <p>The Passcode is <b>5867</b></p>
+            <p>Your Location is <b>In the realm where structures and plans intertwine,
+              I share my name with a service of great design.
+              Guiding the blueprint of nations and lands,
+              Where am I with engineering hands?</b></p>
           </div>
           <div class="modal-footer">
             <button class="btn reset" data-dismiss="modal">
